--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,6 +183,7 @@ article {
 }
 
 .icon-box {
+  /* filter: brightness(100%) hue-rotate(60deg); Change the hue to make it yellow */
   position: relative;
   background: var(--border-gradient-onyx);
   width: 30px;
@@ -1953,7 +1954,12 @@ textarea.form-input::-webkit-resizer { display: none; }
     text-align: center;
   }
 
-  .info-content .title { margin: auto; }
+  .info-content .title {
+    margin: 0 auto; /* Center horizontally */
+    width: 90%; /* 90% width of its container */
+    max-width: 600px; /* Maximum width of 600px */
+  }
+  
 
   .info_more-btn { display: none; }
 
